--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
             margin: 0;
             padding: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+            overflow: hidden;
+            height: 100vh;
+            width: 100vw;
         }
         .quote-container {
-            padding: 1.5rem;
+            padding: 1rem;
             background-color: rgb(247, 247, 247);
             border-radius: 0.5rem;
             border: 1px solid rgba(0, 0, 0, 0.1);
             display: flex;
             gap: 0.75rem;
-            max-width: 100%;
-            margin: 0;
+            height: 120px;
+            overflow: hidden;
+            cursor: pointer;
+            transition: background-color 0.2s ease;
+        }
+        .quote-container:hover {
+            background-color: rgb(242, 242, 242);
+        }
+        .quote-container:active {
+            background-color: rgb(237, 237, 237);
         }
         .emoji {
             font-size: 1.5rem;
+            flex-shrink: 0;
         }
         .quote-content {
             flex: 1;
@@ -30,6 +42,7 @@
             margin: 0 0 0.5rem 0;
             color: rgb(55, 53, 47);
             line-height: 1.5;
+            user-select: none;  /* Prevent text selection on click */
         }
         .japanese {
             font-size: 1.25rem;
@@ -44,12 +57,13 @@
         }
         .translation {
             color: rgb(55, 53, 47);
+            font-size: 0.95rem;
         }
     </style>
 </head>
 <body>
-    <div class="quote-container">
-        <div class="emoji">🎌</div>
+    <div class="quote-container" onclick="setRandomQuote()" title="Click to shuffle">
+        <div class="emoji">💭</div>
         <div class="quote-content">
             <p class="quote-text japanese" id="quote-japanese"></p>
             <p class="quote-text phonetic" id="quote-phonetic"></p>
@@ -83,14 +97,73 @@
                 japanese: "十人十色",
                 phonetic: "Juunin toiro",
                 translation: "Ten people, ten colors - everyone has their own unique style and way"
+            },
+            {
+                japanese: "初心忘るべからず",
+                phonetic: "Shoshin wasuru bekarazu",
+                translation: "Never forget your beginner's mind - maintain your sense of wonder"
+            },
+            {
+                japanese: "千里の道も一歩から",
+                phonetic: "Senri no michi mo ippo kara",
+                translation: "A journey of a thousand miles begins with a single step"
+            },
+            {
+                japanese: "温故知新",
+                phonetic: "Onko chishin",
+                translation: "Learn from the past to create new things"
+            },
+            {
+                japanese: "見る目が変われば世界が変わる",
+                phonetic: "Miru me ga kawareba sekai ga kawaru",
+                translation: "When your perspective changes, the world changes"
+            },
+            {
+                japanese: "継続は力なり",
+                phonetic: "Keizoku wa chikara nari",
+                translation: "Consistency is power - persistence leads to strength"
+            },
+            {
+                japanese: "石の上にも三年",
+                phonetic: "Ishi no ue nimo san-nen",
+                translation: "Sit on a stone for three years - patience leads to success"
+            },
+            {
+                japanese: "わび・さび",
+                phonetic: "Wabi-sabi",
+                translation: "Finding beauty in simplicity and imperfection"
+            },
+            {
+                japanese: "独創性",
+                phonetic: "Dokusosei",
+                translation: "Originality - the essence of unique creative expression"
+            },
+            {
+                japanese: "物は考えよう",
+                phonetic: "Mono wa kangaeyo",
+                translation: "It's all in how you look at it - perspective matters"
+            },
+            {
+                japanese: "臨機応変",
+                phonetic: "Rinkiohen",
+                translation: "Adaptability to the moment - flexibility in approach"
             }
         ];
 
+        let currentQuoteIndex = -1;
+
         function setRandomQuote() {
-            const randomQuote = quotes[Math.floor(Math.random() * quotes.length)];
-            document.getElementById('quote-japanese').textContent = randomQuote.japanese;
-            document.getElementById('quote-phonetic').textContent = randomQuote.phonetic;
-            document.getElementById('quote-translation').textContent = randomQuote.translation;
+            let newIndex;
+            do {
+                newIndex = Math.floor(Math.random() * quotes.length);
+            } while (newIndex === currentQuoteIndex && quotes.length > 1);
+            
+            currentQuoteIndex = newIndex;
+            const quote = quotes[currentQuoteIndex];
+            
+            document.getElementById('quote-japanese').textContent = quote.japanese;
+            document.getElementById('quote-phonetic').textContent = quote.phonetic;
+            document.getElementById('quote-translation').textContent = quote.translation;
         }
 
         // Set initial quote
