--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             overflow: hidden;
             height: 100vh;
             width: 100vw;
-            
+            background: transparent;
         }
         .quote-container {
             padding: 2rem;
-            height: 120px;
+            height: 140px;
             overflow: hidden;
             display: flex;
             flex-direction: column;
