--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             overflow: hidden;
             height: 100vh;
             width: 100vw;
-            background: transparent;
+            background: #fafafa;
         }
         .quote-container {
             padding: 2rem;
