--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="collection-meta">15 quotes • Japanese wisdom</div>
             </a>
             
-            <a href="/notion-quotes/atomic/" class="collection-card">
+            <a href="/notion-quotes/atomic-habits/" class="collection-card">
                 <h2 class="collection-title">Atomic Habits</h2>
                 <p class="collection-description">Key insights from James Clear's revolutionary approach to building good habits and breaking bad ones.</p>
                 <div class="collection-meta">00 quotes • Personal development</div>
