--- a/stoic/index.html
+++ b/stoic/index.html
@@ -149,31 +149,83 @@
     <script>
         // Quotes Data
         const quotes = [
-        {
-            quote: "Accept the things to which fate binds you, and love the people with whom fate brings you together, but do so with all your heart.",
-            book: "Book VI",
-            theme: "Acceptance & Love",
-            contemplation: "Consider how you might better embrace your current circumstances and relationships."
-        },
-        {
-            quote: "When you arise in the morning, think of what a precious privilege it is to be alive - to breathe, to think, to enjoy, to love.",
-            book: "Book II",
-            theme: "Gratitude",
-            contemplation: "What aspects of your life have you taken for granted today?"
-        },
-        {
-            quote: "The best revenge is not to be like your enemy.",
-            book: "Book VI",
-            theme: "Virtue",
-            contemplation: "How might you respond to negativity with understanding rather than retaliation?"
-        },
-        {
-            quote: "Waste no more time arguing what a good man should be. Be one.",
-            book: "Book X",
-            theme: "Action",
-            contemplation: "What single action could you take right now to embody your principles?"
-        }
-    ];
+  {
+    quote: "When you wake up in the morning, tell yourself: The people I deal with today will be meddling, ungrateful, arrogant, dishonest, jealous, and surly. They are like this because they can't tell good from evil.",
+    book: "Book II",
+    contemplation: "How might understanding others' limitations help you respond to them with more patience?"
+  },
+  {
+    quote: "You have power over your mind - not outside events. Realize this, and you will find strength.",
+    book: "Book VI",
+    contemplation: "What situations in your life right now require you to focus on what you can control?"
+  },
+  {
+    quote: "Accept the things to which fate binds you, and love the people with whom fate brings you together, but do so with all your heart.",
+    book: "Book VI",
+    contemplation: "How can you more fully embrace your current circumstances and relationships?"
+  },
+  {
+    quote: "The best revenge is to be unlike him who performed the injury.",
+    book: "Book VI",
+    contemplation: "How might you respond to negativity today with virtue rather than vengeance?"
+  },
+  {
+    quote: "Waste no more time arguing about what a good man should be. Be one.",
+    book: "Book X",
+    contemplation: "What single action could you take right now to embody your principles?"
+  },
+  {
+    quote: "Very little is needed to make a happy life; it is all within yourself, in your way of thinking.",
+    book: "Book VII",
+    contemplation: "What simple pleasures in your life bring you genuine contentment?"
+  },
+  {
+    quote: "If you are distressed by anything external, the pain is not due to the thing itself, but to your estimate of it; and this you have the power to revoke at any moment.",
+    book: "Book VIII",
+    contemplation: "Which of your current concerns might be reframed for peace of mind?"
+  },
+  {
+    quote: "When we cease from activity, or follow a thought to its conclusion, it is a kind of death. Begin doing what needs to be done; the rest will follow.",
+    book: "Book IX",
+    contemplation: "What important task have you been postponing that you could start today?"
+  },
+  {
+    quote: "Look within. Within is the fountain of good, and it will ever bubble up, if thou wilt ever dig.",
+    book: "Book VII",
+    contemplation: "How might you better tap into your internal resources for guidance?"
+  },
+  {
+    quote: "Everything we hear is an opinion, not a fact. Everything we see is a perspective, not the truth.",
+    book: "Book XII",
+    contemplation: "Which of your strongly held views might benefit from examining other perspectives?"
+  },
+  {
+    quote: "Do every act of your life as though it were the last act of your life.",
+    book: "Book II",
+    contemplation: "How would you approach today differently if you treated each action as significant?"
+  },
+  {
+    quote: "The happiness of your life depends upon the quality of your thoughts.",
+    book: "Book IV",
+    contemplation: "What thought patterns could you improve to enhance your daily experience?"
+  },
+  {
+    quote: "The first rule is to keep an untroubled spirit. The second is to look things in the face and know them for what they are.",
+    book: "Book VIII",
+    contemplation: "What situation in your life needs to be seen with clearer eyes?"
+  },
+  {
+    quote: "Remember that very little is needed to make a happy life.",
+    book: "Book VII",
+    contemplation: "What unnecessary complications could you remove from your life?"
+  },
+  {
+    quote: "The soul becomes dyed with the color of its thoughts.",
+    book: "Book V",
+    contemplation: "How do your habitual thoughts affect your character and actions?"
+  }
+];
+
 
         let currentQuoteIndex = -1;
 
