--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
+        /* Base styles remain the same */
         body {
             margin: 0;
             padding: 0;
@@ -74,6 +75,7 @@
             font-size: 0.8rem;
             color: #999;
             margin-top: auto;
+            padding-top: 24px;
         }
 
         .credits-name {
@@ -125,13 +127,13 @@
         }
 
         /* Individual aspect ratios */
-        .embed-container[data-type="kototama"] { aspect-ratio: 3/2; }
-        .embed-container[data-type="atomic-habits"] { aspect-ratio: 2/1; }
+        .embed-container[data-type="kototama"] { aspect-ratio: 4/2; }
+        .embed-container[data-type="atomic-habits"] { aspect-ratio: 3/2; }
         .embed-container[data-type="stoic"] { aspect-ratio: 16/10; }
-        .embed-container[data-type="tao"] { aspect-ratio: 3/2; }
-        .embed-container[data-type="first"] { aspect-ratio: 16/9; }
+        .embed-container[data-type="tao"] { aspect-ratio: 4/2; }
+        .embed-container[data-type="first"] { aspect-ratio: 3/2; }
         .embed-container[data-type="koan"] { aspect-ratio: 3/2; }
-        .embed-container[data-type="bias"] { aspect-ratio: 2/1; }
+        .embed-container[data-type="bias"] { aspect-ratio: 1/1; }
         
         iframe {
             width: 100%;
@@ -185,6 +187,74 @@
 
         .toast.show {
             opacity: 1;
+        }
+
+        /* Responsive Breakpoints */
+        @media (max-width: 1024px) {
+            .main-content {
+                padding: 32px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+            }
+
+            .sidebar {
+                position: relative;
+                width: 100%;
+                height: auto;
+                padding: 24px;
+                border-right: none;
+                border-bottom: 1px solid #eee;
+            }
+
+            .main-content {
+                margin-left: 0;
+                padding: 24px;
+            }
+
+            .instructions {
+                margin-top: 16px;
+            }
+
+            .credits {
+                margin-top: 24px;
+                padding-top: 16px;
+                border-top: 1px solid #eee;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .sidebar {
+                padding: 20px 16px;
+            }
+
+            .main-content {
+                padding: 20px 16px;
+            }
+
+            .grid {
+                gap: 32px;
+            }
+
+            .card-footer {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 8px;
+            }
+
+            .copy-button {
+                padding: 8px 0;
+            }
+
+            .toast {
+                left: 16px;
+                right: 16px;
+                transform: none;
+                text-align: center;
+            }
         }
     </style>
 </head>
