--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ iframe {
                 <ol>
                     <li>Choose your preferred quote collection from the options on the right</li>
                     <li>Click "Copy embed link" below the preview</li>
-                    <li>In Notion, paste the link and choose embed block and paste the URL</li>
+                    <li>In Notion, paste the link and choose "Embed" from the formatting options</li>
                     <li>If necessary, adjust the height of the embed to fit the quote card</li>
                 </ol>
             </div>
