--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ body {
 }
 
 /* Fixed heights for each container */
-.embed-container[data-type="kototama"] { height: 140px; }
-.embed-container[data-type="atomic-habits"] { height: 120px; }
-.embed-container[data-type="stoic"] { height: 150px; }
-.embed-container[data-type="tao"] { height: 170px; }
-.embed-container[data-type="first"] { height: 165px; }
-.embed-container[data-type="koan"] { height: 145px; }
-.embed-container[data-type="bias"] { height: 140px; }
+.embed-container[data-type="kototama"] { height: 180px; }
+.embed-container[data-type="atomic-habits"] { height: 250px; }
+.embed-container[data-type="stoic"] { height: 290px; }
+.embed-container[data-type="tao"] { height: 330px; }
+.embed-container[data-type="first"] { height: 430px; }
+.embed-container[data-type="koan"] { height: 390px; }
+.embed-container[data-type="bias"] { height: 530px; }
 
 iframe {
     width: 100%;
@@ -196,13 +196,14 @@ iframe {
         padding: 32px;
     }
 
-    .embed-container[data-type="kototama"] { height: 130px; }
-    .embed-container[data-type="atomic-habits"] { height: 110px; }
-    .embed-container[data-type="stoic"] { height: 140px; }
-    .embed-container[data-type="tao"] { height: 160px; }
-    .embed-container[data-type="first"] { height: 155px; }
-    .embed-container[data-type="koan"] { height: 135px; }
-    .embed-container[data-type="bias"] { height: 130px; }
+    /* Fixed heights for each container */
+    .embed-container[data-type="kototama"] { height: 180px; }
+    .embed-container[data-type="atomic-habits"] { height: 250px; }
+    .embed-container[data-type="stoic"] { height: 290px; }
+    .embed-container[data-type="tao"] { height: 330px; }
+    .embed-container[data-type="first"] { height: 430px; }
+    .embed-container[data-type="koan"] { height: 390px; }
+    .embed-container[data-type="bias"] { height: 530px; }
 }
 
 @media (max-width: 768px) {
@@ -234,13 +235,13 @@ iframe {
         border-top: 1px solid #eee;
     }
 
-    .embed-container[data-type="kototama"] { height: 120px; }
-    .embed-container[data-type="atomic-habits"] { height: 100px; }
-    .embed-container[data-type="stoic"] { height: 130px; }
-    .embed-container[data-type="tao"] { height: 150px; }
-    .embed-container[data-type="first"] { height: 145px; }
-    .embed-container[data-type="koan"] { height: 125px; }
-    .embed-container[data-type="bias"] { height: 120px; }
+    .embed-container[data-type="kototama"] { height: 240px; }
+    .embed-container[data-type="atomic-habits"] { height: 250px; }
+    .embed-container[data-type="stoic"] { height: 250px; }
+    .embed-container[data-type="tao"] { height: 330px; }
+    .embed-container[data-type="first"] { height: 525px; }
+    .embed-container[data-type="koan"] { height: 405px; }
+    .embed-container[data-type="bias"] { height: 550px; }
 }
 
 @media (max-width: 480px) {
@@ -316,7 +317,7 @@ iframe {
                     <iframe src="kototama/" loading="lazy"></iframe>
                 </div>
                 <div class="card-footer">
-                    <h2 class="card-title">Japanese Wisdom</h2>
+                    <h2 class="card-title">Kototama</h2>
                     <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/kototama">Copy embed link</button>
                 </div>
             </div>
