--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ body {
 .embed-container[data-type="kototama"] { height: 180px; }
 .embed-container[data-type="atomic-habits"] { height: 250px; }
 .embed-container[data-type="stoic"] { height: 290px; }
+.embed-container[data-type="philosophy"] { height: 290px; }
 .embed-container[data-type="tao"] { height: 330px; }
 .embed-container[data-type="first"] { height: 430px; }
 .embed-container[data-type="koan"] { height: 390px; }
@@ -200,6 +201,7 @@ iframe {
     .embed-container[data-type="kototama"] { height: 180px; }
     .embed-container[data-type="atomic-habits"] { height: 250px; }
     .embed-container[data-type="stoic"] { height: 290px; }
+    .embed-container[data-type="philosophy"] { height: 290px; }
     .embed-container[data-type="tao"] { height: 330px; }
     .embed-container[data-type="first"] { height: 430px; }
     .embed-container[data-type="koan"] { height: 390px; }
@@ -238,6 +240,7 @@ iframe {
     .embed-container[data-type="kototama"] { height: 240px; }
     .embed-container[data-type="atomic-habits"] { height: 250px; }
     .embed-container[data-type="stoic"] { height: 250px; }
+    .embed-container[data-type="philosophy"] { height: 290px; }
     .embed-container[data-type="tao"] { height: 330px; }
     .embed-container[data-type="first"] { height: 525px; }
     .embed-container[data-type="koan"] { height: 405px; }
@@ -277,6 +280,7 @@ iframe {
     .embed-container[data-type="kototama"] { height: 100px; }
     .embed-container[data-type="atomic-habits"] { height: 80px; }
     .embed-container[data-type="stoic"] { height: 110px; }
+    .embed-container[data-type="philosophy"] { height: 290px; }
     .embed-container[data-type="tao"] { height: 130px; }
     .embed-container[data-type="first"] { height: 125px; }
     .embed-container[data-type="koan"] { height: 105px; }
@@ -318,7 +322,7 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">Kototama</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/kototama">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/kototama">Copy embed link</button>
                 </div>
             </div>
 
@@ -328,7 +332,7 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">Atomic Habits</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/atomic-habits">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/atomic-habits">Copy embed link</button>
                 </div>
             </div>
 
@@ -338,7 +342,16 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">Marcus Aurelius</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/stoic">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/stoic">Copy embed link</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="embed-container" data-type="stoic">
+                    <iframe src="philosophy/" loading="lazy"></iframe>
+                </div>
+                <div class="card-footer">
+                    <h2 class="card-title">Philosophy</h2>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/philosophy">Copy embed link</button>
                 </div>
             </div>
 
@@ -348,7 +361,7 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">Tao Te Ching</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/tao">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/tao">Copy embed link</button>
                 </div>
             </div>
 
@@ -358,7 +371,7 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">First Principles</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/first">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/first">Copy embed link</button>
                 </div>
             </div>
 
@@ -368,7 +381,7 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">Zen Koans</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/koan">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/koan">Copy embed link</button>
                 </div>
             </div>
 
@@ -378,7 +391,7 @@ iframe {
                 </div>
                 <div class="card-footer">
                     <h2 class="card-title">Cognitive Biases</h2>
-                    <button class="copy-button" data-url="https://danhilse.github.io/notion-quotes/bias">Copy embed link</button>
+                    <button class="copy-button" data-url="https://acyzeck.github.io/notion-quotes/bias">Copy embed link</button>
                 </div>
             </div>
         </div>
