--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -17,7 +17,7 @@
         body {
             min-height: 100vh;
             width: 100vw;
-            background: #17212B;
+            background: #181819;
             font-family: 'Noto Sans', sans-serif;
             display: flex;
             align-items: center;
@@ -31,7 +31,7 @@
             max-width: 680px;
             min-height: 200px;
             max-height: 400px;
-            background: #0c1014;
+            background: #181819;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             cursor: pointer;
